--- a/haskell/stack-ide-atom.cabal
+++ b/haskell/stack-ide-atom.cabal
@@ -17,11 +17,28 @@ cabal-version:       >=1.10
 
 executable stack-ide-atom
   main-is:             Main.hs
+  build-depends:       base >=4.7 && <4.8
+                     , ghcjs-base
+                     , stack-ide-atom
+  hs-source-dirs:      app
+  cpp-options:         -DGHCJS_BROWSER
+  default-language:    Haskell2010
+
+library
+  exposed-modules:     Node.ChildProcess
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.7 && <4.8
                      , ghcjs-base
                      , stack-ide-api
   hs-source-dirs:      src
-  cpp-options:         -DGHCJS_BROWSER
+  default-language:    Haskell2010
+
+test-suite hspec
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  build-depends:       base == 4.*
+                     , stack-ide-atom
+                     , hspec
   default-language:    Haskell2010
