Start writing a test

--- a/haskell/stack-ide-atom.cabal
+++ b/haskell/stack-ide-atom.cabal
@@ -40,5 +40,6 @@ test-suite hspec
   main-is:             Spec.hs
   build-depends:       base == 4.*
                      , stack-ide-atom
+                     , ghcjs-base
                      , hspec
   default-language:    Haskell2010
