--- a/haskell/stack-ide-atom.cabal
+++ b/haskell/stack-ide-atom.cabal
@@ -32,6 +32,7 @@ library
                      , ghcjs-base
                      , stack-ide-api
   hs-source-dirs:      src
+  cpp-options:         -DGHCJS_BROWSER
   default-language:    Haskell2010
 
 test-suite hspec
@@ -42,4 +43,5 @@ test-suite hspec
                      , stack-ide-atom
                      , ghcjs-base
                      , hspec
+  cpp-options:         -DGHCJS_BROWSER
   default-language:    Haskell2010
