--- a/haskell/stack-ide-atom.cabal
+++ b/haskell/stack-ide-atom.cabal
@@ -26,6 +26,8 @@ executable stack-ide-atom
 
 library
   exposed-modules:     Node.ChildProcess
+                     , NiceChildProcess
+                     , GhcjsExtras
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.7 && <4.8
@@ -45,3 +47,4 @@ test-suite hspec
                      , hspec
   cpp-options:         -DGHCJS_BROWSER
   default-language:    Haskell2010
+  extensions:          OverloadedStrings
