--- a/haskell/stack-ide-atom.cabal
+++ b/haskell/stack-ide-atom.cabal
@@ -33,6 +33,7 @@ library
   build-depends:       base >=4.7 && <4.8
                      , ghcjs-base
                      , stack-ide-api
+                     , text
   hs-source-dirs:      src
   cpp-options:         -DGHCJS_BROWSER
   default-language:    Haskell2010
@@ -45,6 +46,7 @@ test-suite hspec
                      , stack-ide-atom
                      , ghcjs-base
                      , hspec
+                     , text
   cpp-options:         -DGHCJS_BROWSER
   default-language:    Haskell2010
   extensions:          OverloadedStrings
