Failed attempt to use TChan

--- a/haskell/stack-ide-atom.cabal
+++ b/haskell/stack-ide-atom.cabal
@@ -34,6 +34,7 @@ library
                      , ghcjs-base
                      , stack-ide-api
                      , text
+                     , stm
   hs-source-dirs:      src
   cpp-options:         -DGHCJS_BROWSER
   default-language:    Haskell2010
