Start writing Stack interaction code

--- a/haskell/stack-ide-atom.cabal
+++ b/haskell/stack-ide-atom.cabal
@@ -27,6 +27,7 @@ executable stack-ide-atom
 library
   exposed-modules:     Node.ChildProcess
                      , NiceChildProcess
+                     , StackIdeM
                      , StackIde
                      , GhcjsExtras
   -- other-modules:
