Should error if something went wrong when readLining and writeLining

--- a/haskell/stack-ide-atom.cabal
+++ b/haskell/stack-ide-atom.cabal
@@ -36,6 +36,8 @@ library
                      , ghcjs-base
                      , stack-ide-api
                      , text
+                     , ivar-simple
+                     , async
                      , free
   hs-source-dirs:      src
   cpp-options:         -DGHCJS_BROWSER
