Squashed 'stack-ide/' changes from a0ffe50..c4a02ae
c4a02ae Updates to stack-mode, for more recent API
d6f3509 Add MIT license #14
2a5a241 Delete unused module Stack.Ide.Cabal

git-subtree-dir: stack-ide
git-subtree-split: c4a02ae28eb0da15afa99c117de2d9c81ac03bc5

--- a/stack-ide-api/stack-ide-api.cabal
+++ b/stack-ide-api/stack-ide-api.cabal
@@ -2,10 +2,10 @@ name:                stack-ide-api
 version:             0.1.0.0
 -- synopsis:
 -- description:
--- license:
+license:             MIT
 license-file:        LICENSE
 author:              Edsko de Vries
-maintainer:          edsko@well-typed.com
+maintainer:          chrisdone@fpcomplete.com
 -- copyright:
 category:            Development
 build-type:          Simple
