Create test for getSourceErrors

--- a/haskell/stack-ide-atom.cabal
+++ b/haskell/stack-ide-atom.cabal
@@ -35,6 +35,7 @@ library
   build-depends:       base >=4.7 && <4.8
                      , ghcjs-base
                      , stack-ide-api
+                     , ide-backend-common
                      , text
                      , ivar-simple
                      , async
