--- a/haskell/stack-ide-atom.cabal
+++ b/haskell/stack-ide-atom.cabal
@@ -29,6 +29,7 @@ library
                      , NiceChildProcess
                      , StackIdeM
                      , StackIde
+                     , StackIdeProcess
                      , GhcjsExtras
   -- other-modules:
   -- other-extensions:
@@ -55,6 +56,7 @@ test-suite hspec
                      , ghcjs-base
                      , hspec
                      , text
+                     , stack-ide-api
   cpp-options:         -DGHCJS_BROWSER
   default-language:    Haskell2010
   extensions:          OverloadedStrings
