getSourceErrors should now work

--- a/haskell/stack-ide-atom.cabal
+++ b/haskell/stack-ide-atom.cabal
@@ -58,6 +58,7 @@ test-suite hspec
                      , hspec
                      , text
                      , stack-ide-api
+                     , ide-backend-common
   cpp-options:         -DGHCJS_BROWSER
   default-language:    Haskell2010
   extensions:          OverloadedStrings
