--- a/circle.yml
+++ b/circle.yml
@@ -2,13 +2,6 @@ machine:
   services:
     - docker
 
-dependencies:
-  cache_directories:
-    - "~/docker"
-
-  override:
-    - bash circleci-docker-cache.sh
-
 test:
   override:
-    - ./docker-gulp circleci
+    - ./docker-gulp test
