--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,8 @@ machine:
 dependencies:
   cache_directories:
     - "~/docker"
+    - "~/stack-ide-atom/.docker-stack"
+    - "~/stack-ide-atom/haskell/.cabal-sandbox"
 
   override:
     - bash circleci-docker-cache.sh
