Make a package in haskell then load it up

--- a/haskell/stack-ide-atom.cabal
+++ b/haskell/stack-ide-atom.cabal
@@ -26,9 +26,11 @@ executable stack-ide-atom
 
 library
   exposed-modules:     Node.ChildProcess
+                     , Atom.Package
                      , NiceChildProcess
                      , StackIdeM
                      , StackIde
+                     , StackIdePackage
                      , StackIdeProcess
                      , UpdateSkippingStackIdeProcess
                      , GhcjsExtras
