--- a/circle.yml
+++ b/circle.yml
@@ -5,10 +5,14 @@ machine:
 dependencies:
   cache_directories:
     - "~/stack-ide-atom/.docker-stack"
-    - "~/stack-ide-atom/haskell/.cabal-sandbox"
+    - "~/stack-ide-atom/.stack-work
 
 test:
   override:
     - git submodule update --init --recursive
     - npm install
-    - ./docker-gulp test
+    - wget -q -O- https://s3.amazonaws.com/download.fpcomplete.com/ubuntu/fpco.key | sudo apt-key add -
+    - echo 'deb http://download.fpcomplete.com/ubuntu/precise stable main'|sudo tee /etc/apt/sources.list.d/fpco.list
+    - sudo apt-get update && sudo apt-get install stack -y
+    - stack upgrade --git
+    - ./gulp build
